Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20561

Galera node shutdown fails in non-Primary

    XMLWordPrintable

Details

    Description

      Galera node refuses to shut down when in non-Primary. Reproducible with the following MTR test:

      --source include/galera_cluster.inc
      --source include/have_innodb.inc
       
      --let $node_1 = node_1
      --let $node_2 = node_2
      --source include/auto_increment_offset_save.inc
       
      --connection node_1
      # Set higher weight for node_1 to keep it in primary
      # while node_2 is isolated.
      SET GLOBAL wsrep_provider_options = 'pc.weight=2';
       
      --connection node_2
      # Isolate node_2 from the group and wait until wsrep_ready becomes OFF.
      SET GLOBAL wsrep_provider_options = 'gmcast.isolate = 1';
      SET SESSION wsrep_sync_wait = 0;
      --let $wait_condition = SELECT VARIABLE_VALUE = 'OFF' FROM INFORMATION_SCHEMA.GLOBAL_STATUS WHERE VARIABLE_NAME = 'wsrep_ready'
      --source include/wait_condition.inc
       
      # Verify that graceful shutdown succeeds.
      --source include/shutdown_mysqld.inc
      --source include/start_mysqld.inc
       
      --let $wait_condition = SELECT VARIABLE_VALUE = 2 FROM INFORMATION_SCHEMA.GLOBAL_STATUS WHERE VARIABLE_NAME = 'wsrep_cluster_size';
      --source include/wait_condition.inc
       
      --connection node_1
      --source include/wait_condition.inc
       
      # Restore original settings.
      SET GLOBAL wsrep_provider_options = 'pc.weight = 1';
      --source include/auto_increment_offset_restore.inc
      

      The test fails with

      CURRENT_TEST: galera.galera_shutdown_nonprim
      mysqltest: In included file "/home/teemu/work/git/mariadb-server/mysql-test/suite/galera/include/shutdown_mysqld.inc": 
      included from /home/teemu/work/git/mariadb-server/mysql-test/suite/galera/t/galera_shutdown_nonprim.test at line 26:
      At line 16: mysql_shutdown failed
      

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            teemu.ollakka Teemu Ollakka
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25d
                0.25d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.